objects/RMA_Transaction__c.object
<CustomObject>
    <fields>
        <fullName>RMA__c</fullName>
        <label>RMA</label>
        <referenceTo>RMA__c</referenceTo>
        <relationshipLabel>RMA Transactions</relationshipLabel>
        <relationshipName>R00N46000003QcsyEAC</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Replacement_Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Replacement Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>RMA Transactions</relationshipLabel>
        <relationshipName>RMA_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Transaction_Date__c</fullName>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <label>Transaction Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Receipt</fullName>
                </value>
                <value>
                    <fullName>Issue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>RMA Transaction</label>
    <nameField>
        <displayFormat>RMA-TL-{MM}{DD}{YY}-{000}</displayFormat>
        <label>RMA Transaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RMA Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>